--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "third_party/z3"]
 	path = third_party/z3
-	url = https://github.com/Z3Prover/z3
+	url = https://github.com/5hadowblad3/z3.git
